# clear-sans-fonts

./: readme.md
scripts/: extractUfo.py  extractUfo.sh  format-scripts.sh  format.sh  generate-sources-defcon.py  generate-sources-defcon.sh  generate-sources-fontforge.py  generate-sources-fontforge.sh  install.sh  pyproject.toml  readme.md
